# Heterogeneous-Solvers

./: .clangd  .gitignore  CMakeLists.txt  Justfile  x_result.txt
src/: main.cpp
src/dataStructures/: RightHandSide.cpp  RightHandSide.hpp  SymmetricMatrix.cpp  SymmetricMatrix.hpp  SymmetricMatrixMixed.cpp  SymmetricMatrixMixed.hpp
src/gaussianProcess/: GaussianProcess.cpp  GaussianProcess.hpp
src/kernel/: MatrixMatrixOperations.cpp  MatrixMatrixOperations.hpp  MatrixMatrixOperationsMixed.cpp  MatrixMatrixOperationsMixed.hpp  MatrixOperations.cpp  MatrixOperations.hpp  MatrixOperationsMixed.cpp  MatrixOperationsMixed.hpp  MatrixVectorOperations.cpp  MatrixVectorOperations.hpp  MatrixVectorOperationsMixed.cpp  MatrixVectorOperationsMixed.hpp  VectorOperations.cpp  VectorOperations.hpp
src/loadBalancer/: LoadBalancer.cpp  LoadBalancer.hpp  PowerLoadBalancer.cpp  PowerLoadBalancer.hpp  RuntimeLoadBalancer.cpp  RuntimeLoadBalancer.hpp  StaticLoadBalancer.cpp  StaticLoadBalancer.hpp
src/metricsTracker/: MetricsTracker.cpp  MetricsTracker.hpp
src/solver/cg/: CG.cpp  CG.hpp  CGMixed.cpp  CGMixed.hpp
src/solver/cholesky/: Cholesky.cpp  Cholesky.hpp  CholeskyMixed.cpp  CholeskyMixed.hpp  TriangularSystemSolver.cpp  TriangularSystemSolver.hpp  TriangularSystemSolverMixed.cpp  TriangularSystemSolverMixed.hpp
src/utility/: Configuration.cpp  Configuration.hpp  MatrixGenerator.cpp  MatrixGenerator.hpp  MatrixGeneratorMixed.cpp  MatrixGeneratorMixed.hpp  MatrixParser.cpp  MatrixParser.hpp  MatrixParserMixed.cpp  MatrixParserMixed.hpp  RankFinder.cpp  RankFinder.hpp  UtilityFunctions.cpp  UtilityFunctions.hpp
tests/: testMatrixMatrixOperations.cpp  testMatrixMatrixOperationsMixed.cpp  testMatrixOperations.cpp  testMatrixOperationsMixed.cpp  testMatrixVectorBlock.cpp  testSymmetricMatrix.cpp  testSymmetricMatrixMixed.cpp  testVectorOperations.cpp
